--- a/KeyDerivationInterface/KeyDerivation.csproj
+++ b/KeyDerivationInterface/KeyDerivation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.6.2" />
+    <PackageReference Include="System.Memory" Version="4.6.3" />
   </ItemGroup>
   
 </Project>
